Fixed rca year grouping

--- a/WeeklyJiraReports.ipynb
+++ b/WeeklyJiraReports.ipynb
@@ -2611,7 +2611,7 @@
     "    )['Issue Key'].count().rename('Count').reset_index(name='Count').fillna(\"NA\")\n",
     "\n",
     "# Root Cause Categories\n",
-    "grp_date_rca_yr = lastweekdfresolved.groupby(\n",
+    "grp_date_rca_yr = ytdresolved.groupby(\n",
     "        ['ResolvedDate','Root Cause'],\n",
     "        dropna=False\n",
     "    )['Issue Key'].count().rename('Count').reset_index(name='Count').fillna(\"NA\")"
